// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`RENDER_PRESETS youtube-1080p が期待する ffmpeg 引数を作る 1`] = `
{
  "acodec": "aac",
  "args": [
    "-i",
    "<tmp>",
    "-filter_complex_threads",
    "1",
    "-filter_complex",
    "-map",
    "[V1]",
    "-map",
    "[a3]",
    "-c:v",
    "libx264",
    "-preset",
    "slow",
    "-crf",
    "18",
    "-pix_fmt",
    "yuv420p",
    "-g",
    "60",
    "-r",
    "30/1",
    "-frames:v",
    "30",
    "-c:a",
    "aac",
    "-b:a",
    "192k",
    "-ar",
    "48000",
    "-ac",
    "2",
    "-t",
    "1.000000",
    "-movflags",
    "+faststart",
    "-profile:v",
    "high",
    "-level",
    "4.2",
    "-f",
    "mp4",
    "<tmp>",
  ],
  "format": "mp4",
  "preset": "youtube-1080p",
  "resolution": {
    "height": 1080,
    "width": 1920,
  },
  "vcodec": "libx264",
  "verifiable": true,
}
`;

exports[`RENDER_PRESETS youtube-4k が期待する ffmpeg 引数を作る 1`] = `
{
  "acodec": "aac",
  "args": [
    "-i",
    "<tmp>",
    "-filter_complex_threads",
    "1",
    "-filter_complex",
    "-map",
    "[V1]",
    "-map",
    "[a3]",
    "-c:v",
    "libx264",
    "-preset",
    "slow",
    "-crf",
    "17",
    "-pix_fmt",
    "yuv420p",
    "-g",
    "60",
    "-r",
    "30/1",
    "-frames:v",
    "30",
    "-c:a",
    "aac",
    "-b:a",
    "192k",
    "-ar",
    "48000",
    "-ac",
    "2",
    "-t",
    "1.000000",
    "-movflags",
    "+faststart",
    "-profile:v",
    "high",
    "-level",
    "5.1",
    "-f",
    "mp4",
    "<tmp>",
  ],
  "format": "mp4",
  "preset": "youtube-4k",
  "resolution": {
    "height": 2160,
    "width": 3840,
  },
  "vcodec": "libx264",
  "verifiable": true,
}
`;

exports[`RENDER_PRESETS instagram-reel が期待する ffmpeg 引数を作る 1`] = `
{
  "acodec": "aac",
  "args": [
    "-i",
    "<tmp>",
    "-filter_complex_threads",
    "1",
    "-filter_complex",
    "-map",
    "[V1]",
    "-map",
    "[a3]",
    "-c:v",
    "libx264",
    "-preset",
    "medium",
    "-crf",
    "20",
    "-pix_fmt",
    "yuv420p",
    "-g",
    "60",
    "-r",
    "30/1",
    "-frames:v",
    "30",
    "-c:a",
    "aac",
    "-b:a",
    "128k",
    "-ar",
    "48000",
    "-ac",
    "2",
    "-t",
    "1.000000",
    "-movflags",
    "+faststart",
    "-f",
    "mp4",
    "<tmp>",
  ],
  "format": "mp4",
  "preset": "instagram-reel",
  "resolution": {
    "height": 1920,
    "width": 1080,
  },
  "vcodec": "libx264",
  "verifiable": true,
}
`;

exports[`RENDER_PRESETS twitter が期待する ffmpeg 引数を作る 1`] = `
{
  "acodec": "aac",
  "args": [
    "-i",
    "<tmp>",
    "-filter_complex_threads",
    "1",
    "-filter_complex",
    "-map",
    "[V1]",
    "-map",
    "[a3]",
    "-c:v",
    "libx264",
    "-preset",
    "medium",
    "-crf",
    "23",
    "-pix_fmt",
    "yuv420p",
    "-g",
    "60",
    "-r",
    "30/1",
    "-frames:v",
    "30",
    "-c:a",
    "aac",
    "-b:a",
    "128k",
    "-ar",
    "48000",
    "-ac",
    "2",
    "-t",
    "1.000000",
    "-movflags",
    "+faststart",
    "-f",
    "mp4",
    "<tmp>",
  ],
  "format": "mp4",
  "preset": "twitter",
  "resolution": {
    "height": 720,
    "width": 1280,
  },
  "vcodec": "libx264",
  "verifiable": true,
}
`;

exports[`RENDER_PRESETS web-preview が期待する ffmpeg 引数を作る 1`] = `
{
  "acodec": "aac",
  "args": [
    "-i",
    "<tmp>",
    "-filter_complex_threads",
    "1",
    "-filter_complex",
    "-map",
    "[V1]",
    "-map",
    "[a3]",
    "-c:v",
    "libx264",
    "-preset",
    "veryfast",
    "-crf",
    "28",
    "-pix_fmt",
    "yuv420p",
    "-g",
    "60",
    "-r",
    "30/1",
    "-frames:v",
    "30",
    "-c:a",
    "aac",
    "-b:a",
    "96k",
    "-ar",
    "48000",
    "-ac",
    "2",
    "-t",
    "1.000000",
    "-movflags",
    "+faststart",
    "-f",
    "mp4",
    "<tmp>",
  ],
  "format": "mp4",
  "preset": "web-preview",
  "resolution": {
    "height": 720,
    "width": 1280,
  },
  "vcodec": "libx264",
  "verifiable": true,
}
`;

exports[`RENDER_PRESETS prores-422 が期待する ffmpeg 引数を作る 1`] = `
{
  "acodec": "pcm_s16le",
  "args": [
    "-i",
    "<tmp>",
    "-filter_complex_threads",
    "1",
    "-filter_complex",
    "-map",
    "[V1]",
    "-map",
    "[a3]",
    "-c:v",
    "prores_ks",
    "-pix_fmt",
    "yuv422p10le",
    "-r",
    "30/1",
    "-frames:v",
    "30",
    "-c:a",
    "pcm_s16le",
    "-ar",
    "48000",
    "-ac",
    "2",
    "-t",
    "1.000000",
    "-profile:v",
    "3",
    "-f",
    "mov",
    "<tmp>",
  ],
  "format": "mov",
  "preset": "prores-422",
  "resolution": {
    "height": 360,
    "width": 640,
  },
  "vcodec": "prores_ks",
  "verifiable": true,
}
`;

exports[`RENDER_PRESETS archive-h265 が期待する ffmpeg 引数を作る 1`] = `
{
  "acodec": "aac",
  "args": [
    "-i",
    "<tmp>",
    "-filter_complex_threads",
    "1",
    "-filter_complex",
    "-map",
    "[V1]",
    "-map",
    "[a3]",
    "-c:v",
    "libx265",
    "-preset",
    "medium",
    "-crf",
    "22",
    "-pix_fmt",
    "yuv420p",
    "-g",
    "60",
    "-r",
    "30/1",
    "-frames:v",
    "30",
    "-c:a",
    "aac",
    "-b:a",
    "192k",
    "-ar",
    "48000",
    "-ac",
    "2",
    "-t",
    "1.000000",
    "-movflags",
    "+faststart",
    "-tag:v",
    "hvc1",
    "-f",
    "mp4",
    "<tmp>",
  ],
  "format": "mp4",
  "preset": "archive-h265",
  "resolution": {
    "height": 360,
    "width": 640,
  },
  "vcodec": "libx265",
  "verifiable": true,
}
`;

exports[`RENDER_PRESETS audio-only-mp3 が期待する ffmpeg 引数を作る 1`] = `
{
  "acodec": "libmp3lame",
  "args": [
    "-filter_complex_threads",
    "1",
    "-filter_complex",
    "-map",
    "[a1]",
    "-vn",
    "-c:a",
    "libmp3lame",
    "-ar",
    "48000",
    "-ac",
    "2",
    "-q:a",
    "2",
    "-f",
    "mp3",
    "<tmp>",
  ],
  "format": "mp3",
  "preset": "audio-only-mp3",
  "resolution": {
    "height": 360,
    "width": 640,
  },
  "vcodec": null,
  "verifiable": false,
}
`;

exports[`RENDER_PRESETS gif が期待する ffmpeg 引数を作る 1`] = `
{
  "acodec": null,
  "args": [
    "-i",
    "<tmp>",
    "-filter_complex_threads",
    "1",
    "-filter_complex",
    "-map",
    "[montash_out_g]",
    "-an",
    "-c:v",
    "gif",
    "-r",
    "15/1",
    "-frames:v",
    "15",
    "-f",
    "gif",
    "<tmp>",
  ],
  "format": "gif",
  "preset": "gif",
  "resolution": {
    "height": 270,
    "width": 480,
  },
  "vcodec": "gif",
  "verifiable": false,
}
`;

exports[`RENDER_PRESETS thumbnail が期待する ffmpeg 引数を作る 1`] = `
{
  "acodec": null,
  "args": [
    "-i",
    "<tmp>",
    "-filter_complex_threads",
    "1",
    "-filter_complex",
    "-map",
    "[V1]",
    "-an",
    "-c:v",
    "png",
    "-r",
    "30/1",
    "-frames:v",
    "1",
    "-f",
    "image2",
    "<tmp>",
  ],
  "format": "image2",
  "preset": "thumbnail",
  "resolution": {
    "height": 360,
    "width": 640,
  },
  "vcodec": "png",
  "verifiable": false,
}
`;
